[C6] Add available check for car
